# itmo-web-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_routers.py
.github/workflows/: continuous-integration.yml  docker-publish.yml
src/: README.md  __init__.py  agent.py  app.py  logger.py  router.py
src/schemas/: request.py
